# example_dishka_fastapiusers

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
src/example_dishka_fastapiusers/: config.py
src/example_dishka_fastapiusers/data_access/migrations/: env.py
src/example_dishka_fastapiusers/data_access/migrations/versions/: c6a331a8c1c3_init_db.py
src/example_dishka_fastapiusers/data_access/models/: base.py  user.py
src/example_dishka_fastapiusers/data_access/models/types/: int_pk.py
src/example_dishka_fastapiusers/dependencies/: fastapi_users.py
src/example_dishka_fastapiusers/di/: main.py
src/example_dishka_fastapiusers/di/providers/: adapters.py  usecases.py
src/example_dishka_fastapiusers/entrypoint/: web_api.py
src/example_dishka_fastapiusers/presentation/web_api/routers/: private.py  public.py
src/example_dishka_fastapiusers/presentation/web_api/schemas/: fastapi_users.py
